readme & spec cleanup (prepping for json-mapper)
